--- a/public/global.css
+++ b/public/global.css
@@ -11,6 +11,11 @@ body {
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+@media (max-width: 640px) {
+    body {
+		padding: 4px;
+	}
+}
 
 a {
 	color: rgb(0,100,200);
