Добавлен sirv в зависимости для прода. Отступы, анимация при наведении, прозрачность. Введение переименовано в приветствие

--- a/public/global.css
+++ b/public/global.css
@@ -69,3 +69,9 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+h2 {
+	line-height: 4.25rem;
+	height: 4.25rem;
+	font-size: 2rem;
+}
