--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,33 @@
+.theme-snow {
+	--color: #333;
+	--color-second: #333;
+	--bg: #fff;
+	--bg-second: #fff;
+	--a-color: rgb(0,100,200);
+	transition: 0.2s all;
+}
+
+.theme-night {
+	--color: #333;
+	--color-second: #888;
+	--bg: #000;
+	--bg-second: #031f30;
+	--a-color: var(--a-color);
+	transition: 0.2s all;
+}
+
+.mdc-form-field {
+	color: var(--color-second)!important;
+}
+
+.mdc-radio:after, .mdc-radio:before {
+    background-color: #111186!important;
+}
+
+.theme-night .mdc-radio .mdc-radio__native-control:enabled:not(:checked)+.mdc-radio__background .mdc-radio__outer-circle {
+    border-color: rgb(28 148 232 / 52%)!important;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,12 +35,14 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: var(--color);
+	background-color: var(--bg);
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
+
 @media (max-width: 640px) {
     body {
 		padding: 4px;
@@ -18,7 +50,7 @@ body {
 }
 
 a {
-	color: rgb(0,100,200);
+	color: var(--a-color);
 	text-decoration: none;
 }
 
